; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32/test/extr_test_sleep.c_test_light_sleep.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32/test/extr_test_sleep.c_test_light_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"%d %d\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @test_light_sleep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_light_sleep(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = call i32 @vTaskDelay(i32 2)
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %16, %1
  %7 = load i32, i32* %3, align 4
  %8 = icmp slt i32 %7, 1000
  br i1 %8, label %9, label %19

9:                                                ; preds = %6
  %10 = call i32 (...) @xPortGetCoreID()
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %11)
  %13 = load i32, i32* @stdout, align 4
  %14 = call i32 @fflush(i32 %13)
  %15 = call i32 (...) @esp_light_sleep_start()
  br label %16

16:                                               ; preds = %9
  %17 = load i32, i32* %3, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %3, align 4
  br label %6

19:                                               ; preds = %6
  %20 = load i8*, i8** %2, align 8
  %21 = ptrtoint i8* %20 to i32
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @xSemaphoreGive(i32 %22)
  %24 = call i32 @vTaskDelete(i32* null)
  ret void
}

declare dso_local i32 @vTaskDelay(i32) #1

declare dso_local i32 @printf(i8*, i32, i32) #1

declare dso_local i32 @xPortGetCoreID(...) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @esp_light_sleep_start(...) #1

declare dso_local i32 @xSemaphoreGive(i32) #1

declare dso_local i32 @vTaskDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
